--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
-
 .footer {
   width: 100%;
-  background-color: var(--primary-bg);
+  background-color: white;
   padding: 1rem 0;
-  border-top: 1px solid var(--border-color);
+  border-top: 5px solid black;
 }
 
 .footer-content {
@@ -18,7 +16,6 @@
 
 .login-link,
 .logout-button {
-  font-family: "Playfair Display", serif;
   font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase;
