--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
-
 header {
   width: 100%;
-  background-color: var(--primary-bg);
+  background-color: white;
   padding: 1rem 0;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 5px solid black;
 }
 
 nav {
@@ -28,7 +26,6 @@ nav {
 .nav-links a {
   color: var(--primary-text);
   text-decoration: none;
-  font-family: "Playfair Display", serif;
   font-size: 1.1rem;
   font-weight: 700;
   text-transform: uppercase;
