--- a/src/components/MediaReviews.css
+++ b/src/components/MediaReviews.css
@@ -1,6 +1,21 @@
 .media-reviews {
   padding: 20px;
   font-family: Arial, sans-serif;
+  position: relative;
+  overflow: hidden;
+}
+
+.media-reviews::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at 30% 70%, #ff9ff3, #feca57, #54a0ff);
+  filter: blur(20px);
+  opacity: 0.7;
+  z-index: -1;
 }
 
 .scroll-container {
@@ -310,5 +325,29 @@
 
   .review-popup-image-container {
     height: 200px;
+  }
+}
+.loading-container {
+  min-height: calc(100vh - 60px); /* Adjust 60px to match your header height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #000;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
