--- a/src/components/MediaReviews.css
+++ b/src/components/MediaReviews.css
@@ -37,6 +37,7 @@
   position: relative;
   overflow: hidden;
   border-radius: 8px;
+  width: 200px;
   height: 300px;
 }
 
@@ -111,31 +112,33 @@
   flex-direction: row;
   overflow: hidden;
   position: relative;
+  padding: 20px;
 }
 
 .review-popup-image-container {
-  width: 40%;
-  height: 100%;
+  width: 200px;
+  height: 300px;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #f0f0f0;
   border-radius: 8px;
+  flex-shrink: 0;
+  margin-right: 20px;
 }
 
 .review-popup-image {
-  max-width: 100%;
-  max-height: 100%;
-  border-radius: 8px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   display: block;
+  border-radius: 8px;
 }
 
 .review-popup-text {
-  width: 60%;
+  flex-grow: 1;
   height: 100%;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   overflow-y: auto;
@@ -148,8 +151,6 @@
 
 .review-popup-text p {
   margin-bottom: 10px;
-  margin-right: 12px;
-  margin-left: 10px;
 }
 
 .review-content {
@@ -163,7 +164,6 @@
   display: flex;
   justify-content: flex-end;
   margin-top: 20px;
-  padding-bottom: 20px;
 }
 
 .review-popup-buttons button {
@@ -178,13 +178,11 @@
 .edit-review-button {
   background-color: #28a745;
   color: white;
-  margin-bottom: 3px;
 }
 
 .delete-review-button {
   background-color: #dc3545;
   color: white;
-  margin-bottom: 3px;
 }
 
 .close-button {
@@ -244,8 +242,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
 }
 
 .edit-review-form input,
@@ -315,20 +312,21 @@
 @media (max-width: 768px) {
   .review-popup-content {
     flex-direction: column;
-  }
-
-  .review-popup-image-container,
-  .review-popup-text {
-    width: 100%;
-    height: auto;
+    align-items: center;
   }
 
   .review-popup-image-container {
-    height: 200px;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .review-popup-text {
+    width: 100%;
   }
 }
+
 .loading-container {
-  min-height: calc(100vh - 60px); /* Adjust 60px to match your header height */
+  min-height: calc(100vh - 60px);
   display: flex;
   justify-content: center;
   align-items: center;
