--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 /* src/App.css */
 
 :root {
-  --primary-bg: #ffffff;
-  --secondary-bg: #ffffff;
+  --primary-bg: #31312e;
+  --secondary-bg: #31312e;
   --primary-text: #000000;
   --secondary-text: #000000;
   --accent-color: gray;
