updated css, added consistent styling and updated file structure

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -39,9 +39,9 @@
 .loginLink,
 .logoutButton {
   font-family: "Times New Roman", Times, serif;
-  font-size: 30px;
-  font-weight: bold;
-  color: #d97757;
+  font-size: 14px;
+  font-weight: normal;
+  color: #999999;
   text-decoration: none;
   background: none;
   border: none;
@@ -51,7 +51,7 @@
 
 .loginLink:hover,
 .logoutButton:hover {
-  color: #b85f3d;
+  color: #b3b3b3;
 }
 
 @media (max-width: 768px) {
@@ -61,16 +61,20 @@
   }
 
   .socialIcons {
-    order: 2;
-  }
-
-  .adminLink {
     order: 1;
   }
 
-  .socialLink,
+  .adminLink {
+    order: 2;
+    margin-top: 0.5rem;
+  }
+
+  .socialLink {
+    font-size: 24px;
+  }
+
   .loginLink,
   .logoutButton {
-    font-size: 24px;
+    font-size: 12px;
   }
 }
