--- a/src/components/ReviewForm/ReviewForm.module.css
+++ b/src/components/ReviewForm/ReviewForm.module.css
@@ -40,6 +40,17 @@
   color: #fff;
   font-size: 16px;
   box-sizing: border-box;
+  appearance: none; /* Removes default browser styling */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.select {
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23FFFFFF%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
+  background-position: right 12px top 50%;
+  background-size: 12px auto;
+  padding-right: 30px; /* Make room for custom arrow */
 }
 
 .input:focus,
@@ -72,20 +83,13 @@
   background-color: #b85f3d;
 }
 
-.error {
-  color: #ff6b6b;
-  font-size: 14px;
-  margin-top: 5px;
+/* Add these styles to ensure consistency across browsers */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-@media (max-width: 768px) {
-  .reviewForm {
-    padding: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-
-  .formTitle {
-    font-size: 1.2rem;
-  }
+input[type="number"] {
+  -moz-appearance: textfield;
 }
