--- a/src/components/ReviewPopup/ReviewPopup.module.css
+++ b/src/components/ReviewPopup/ReviewPopup.module.css
@@ -29,6 +29,7 @@
 .closeButton {
   position: sticky;
   top: 10px;
+  right: 10px;
   float: right;
   width: 40px;
   height: 40px;
@@ -120,6 +121,15 @@
   .reviewPopupContent {
     width: 95%;
     padding: 15px;
+  }
+
+  .closeButton {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    margin: 0;
   }
 
   .reviewPopupButtons {
