--- a/src/components/ReviewPopup/ReviewPopup.module.css
+++ b/src/components/ReviewPopup/ReviewPopup.module.css
@@ -24,6 +24,7 @@
   max-height: 90vh;
   overflow-y: auto;
   padding: 20px;
+  padding-top: 5px;
   padding-right: 30px;
   color: #fff;
   position: relative;
