--- a/src/components/ReviewItem/ReviewItem.module.css
+++ b/src/components/ReviewItem/ReviewItem.module.css
@@ -9,6 +9,19 @@
   transition: transform 0.3s ease;
   border-radius: 8px;
   background-color: #31312e;
+  opacity: 0;
+  transform: translateX(-50px);
+}
+
+.slideIn {
+  animation: slideIn 0.5s ease forwards;
+}
+
+@keyframes slideIn {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .reviewItem:hover {
@@ -53,7 +66,7 @@
 .reviewTitle {
   font-size: 16px;
   font-weight: bold;
-  margin: 10px 10px 5px;
+  margin: 10px 10px 0px 10px;
   color: #fff;
 }
 
@@ -61,10 +74,15 @@
   font-size: 14px;
   color: #d97757;
   padding-left: 10px;
+  margin-top: 0px;
+  margin-bottom: 0;
 }
 
 .reviewDate {
+  margin-top: 0px;
+  margin-bottom: 0px;
   font-size: 12px;
   color: #999;
   padding-left: 10px;
+  padding-bottom: 10px;
 }
